added music events

--- a/index.html
+++ b/index.html
@@ -3258,7 +3258,7 @@
 	                            <li><a data-toggle="tab" href="#vocalicious" class="event-list float-nav">Vocalicious</a></li>
 	                            <li><a data-toggle="tab" href="#balladeers" class="event-list float-nav">Balladeers</a></li>
 	                            <li><a data-toggle="tab" href="#vrind" class="event-list float-nav">Vrind</a></li>
-	                            <li><a data-toggle="tab" href="#tows-a-show" class="event-list float-nav">Tow's A Show</a></li>	
+	                            <li><a data-toggle="tab" href="#twos-a-show" class="event-list float-nav">Two's A Show</a></li>	
 	                            <li><a data-toggle="tab" href="#acoustic-alchemy" class="event-list float-nav">Acoustic Alchemy</a></li>                            
 	                        </ul>
 	                    </div>
@@ -3446,16 +3446,16 @@
 						        </div>
 
 						        <!-- Tow's A Show -->
-						        <div id="tows-a-show" class="tab-pane fade">
+						        <div id="twos-a-show" class="tab-pane fade">
 						            <ul class="nav nav-tabs">
-						                <li class="active"><a data-toggle="tab" href="#towsashowhome">Info</a></li>
-						                <li><a data-toggle="tab" href="#towsashowmenu1">Rules</a></li>
-						                <li><a data-toggle="tab" href="#towsashowmenu2">Contact</a></li>
+						                <li class="active"><a data-toggle="tab" href="#twosashowhome">Info</a></li>
+						                <li><a data-toggle="tab" href="#twosashowmenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#twosashowmenu2">Contact</a></li>
 						                <button class="btn pull-right" href="http://goo.gl/forms/ezruvyuquI">Register</button>
 						            </ul>
 
 						            <div class="tab-content">
-						                <div id="towsashowhome" class="tab-pane fade in active">
+						                <div id="twosashowhome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">They say the best things in life come in threes. If you three think you're one of those things, you have the stage. Show us your magic.<br>
 						                            Participants can register both online and offline (on the spot). Only one person from the team should register.
@@ -3468,7 +3468,7 @@
 						                        <div class="info-col"></div>
 						                    </div>
 						                </div>
-						                <div id="towsashowmenu1" class="tab-pane fade">
+						                <div id="twosashowmenu1" class="tab-pane fade">
 						                    <div class="rule-content">
 						                        1.       Time limit: 8 minutes, including set up.<br>
 						                        2.       There should be exactly three members in a team.<br>
@@ -3480,7 +3480,7 @@
 						                        Originality, creativity, coordination and overall impact.<br>
 						                    </div>
 						                </div>
-						                <div id="towsashowmenu2" class="tab-pane fade">
+						                <div id="twosashowmenu2" class="tab-pane fade">
 						                    <div class="contact-content">
 						                        <b>Nikil James Paul</b> +91-9643617174<br>
 						                        <b>Suhail Subair</b> +91-7042673847<br>
