all events aligned

--- a/index.html
+++ b/index.html
@@ -3844,10 +3844,10 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#war-of-words" class="event-list float-nav">Wars of Words</a></li>
+	                            <li><a data-toggle="tab" href="#war-of-words" class="event-list float-nav">War of Words</a></li>
 	                            <li><a data-toggle="tab" href="#creative-writing" class="event-list float-nav">Creative Writing</a></li>
 	                            <li><a data-toggle="tab" href="#mixed-bag" class="event-list float-nav">Mixed Bag</a></li>
-	                            <li><a data-toggle="tab" href="#kavyanjana" class="event-list float-nav">काव्यांजना </a></li>
+	                            <li><a data-toggle="tab" href="#kavyanjana" class="event-list float-nav">काव्यांजना</a></li>
 	                            <li><a data-toggle="tab" href="#just-a-minute" class="event-list float-nav">Just A Minute</a></li>
 	                            <li><a data-toggle="tab" href="#drishtikon" class="event-list float-nav">दृष्टिकोण</a></li>
 	                       
@@ -4136,9 +4136,9 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
+	                    		<li><a data-toggle="tab" href="#livewire" class="event-list float-nav">Livewire</a></li>
 	                            <li><a data-toggle="tab" href="#rock-night" class="event-list float-nav">Rock Night</a></li>
-	                            <li><a data-toggle="tab" href="#edm-night" class="event-list float-nav">EDM Night</a></li>
-	                            <li><a data-toggle="tab" href="#livewire" class="event-list float-nav">Livewire</a></li>
+	                            <li><a data-toggle="tab" href="#edm-night" class="event-list float-nav">EDM Night</a></li>	                            
 	                        </ul>
 	                    </div>
 	                    <div class="col-xs-9">
