--- a/index.html
+++ b/index.html
@@ -4356,8 +4356,15 @@
 						                <div id="edm-nighthome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                        	EDM- what once developed from a small culture and now one of the biggest music culture of the world.Hardwell, Garrix, Guetta being just a few names.<br><br>
-						                        With the catchy beats and the electrifying rhythm, Engifest 2k16 endeavors a night in our own campus, where each head will keep banging and every feet will groove  under the electric sky. The moment when you'll realize EDM is not music anymore it's a lifestyle. YOLO..!!!
+						                        	Anokha. Adhbudh. Aelaan.<br><br>
+
+													Akkad Bakkad Bambe Bo.<br>
+													Engi main dekho aa gaya woh.<br>
+													Aaja thoda Chennai Bass bajva de. <br>
+													Bass Rani  ke saath Raja Baja bhi bulva de.<br>
+													Aao Engifest ka Scene Set Karwa De!<br><br>
+
+													Engifest 2017 brings to you  one of the most exciting, experimental and engaging electronic music producers in the Indian Scene – NUCLEYA!
 						                        </div>
 						                        <!-- <div class="info-col">
 						                            <b>Date: </b>15 Feb<br>
@@ -4450,36 +4457,99 @@
 						                    <div class="info-content">
 						                        <div class="info-row">With   any   part   you   play   there   is   a   certain   amount   of   yourself   in   it. There   has   tobe,otherwise it’s not acting.It’s lying.”The deep message wrapped in    emotions, humor and energy  is what nukkad is known for.The artists shall roar till their message spreads farand wide.
 						                        </div>
-						                        <div class="info-col">
+						                        <!-- <div class="info-col">
 						                            <b>Date: </b>13 Feb<br>
 						                            <b>Time: </b>10:00 am<br>
 						                            <b>Venue: </b>Mech C Parking<br>
-						                        </div>
+						                        </div> -->
 						                        <div class="info-col"></div>
 						                    </div>
 						                </div>
 						                <div id="nukkadmenu1" class="tab-pane fade">
-						                    <div class="rule-content">1. The team size represents the number of people registered as a team. Only these shall be allowed to perform the street play.<br>
-						                        2. Minimum of 8 actors are to be included in the team.<br>
-						                        3. The time limit is 21 minute (empty stage to empty stage).<br>
-						                        4. Music accompanists are included in the team number stated above.<br>
-						                        5. Teams are expected to perform at an open air venue, on a circular stage with audience all around.<br>
-						                        6. No electrical appliances shall be allowed during the performance, whether inside or outside the circle of performance.<br>
-						                        7. Only live music is allowed. Teams will have to bring their own instruments - no instrument shall be provided.<br>
-						                        8. Language of the performance should be Hindi/English or both. However short sub passages in other languages are allowed.<br>
-						                        9. Any kind of fluid, live animals, flame, heavy object or any material which has a possibility of damaging the stage is not allowed.<br>
-						                        10. Dry colours may be used during the play, but the teams have to clean the stage after their performance and the cleaning time will be included in the performance time.<br>
-						                        11. Teams will be heavily penalised if they exceed the time limit.<br>
-						                        12. Plays can be based on any theme but since performance is being held at public venues, any content directed against a certain political group or religious community is strictly prohibited.<br>
-						                        13. Obscenity (at the discretion of judges) of any kind is not allowed and may lead to disqualification.<br>
-						                        14. Any kind of plagiarism and profanity will lead to immediate disqualification.<br>
-						                        15. The decision of the judges will be final and binding.<br>
+						                    <div class="rule-content">
+						                    	PRELIMS/ELIMINATIONS:<br>
+
+												All the participating teams must mail a short synopsis (50-100 words) of their scripts and the
+
+												script to pratibimb.dtu@gmail.com
+
+												15 teams will be shortlisted on basis of script, past performances (preference will be given
+
+												to teams registering first)<br><br>
+
+												FINALS:<br>
+
+												Team size: No restrictions<br>
+
+												Time limit: 22+2 minutes (empty stage to empty stage)<br>
+
+												Teams must perform the same street play which was mentioned in the script
+
+												eliminations.<br><br>
+
+												Judging Criteria:<br>
+
+												Acting, Voice (sync, modulation, diction), Screenplay, Script, Crowd interaction and
+
+												Overall impact.<br><br>
+
+												General Rules:<br>
+
+												1. The team size represents the number of people registered as a team. Only these
+
+												shall be allowed to perform the street play.<br>
+
+												2. Minimum of 8 actors are to be included in the team.<br>
+
+												3. Music accompanists are included in the team number stated above.<br>
+
+												4. Teams are expected to perform at an open air venue, on a circular stage with
+
+												audience all around.<br>
+
+												5. No electrical appliances shall be allowed during the performance, whether inside
+
+												or outside the circle of performance.<br>
+
+												6. Only live music is allowed. Teams will have to bring their own instruments - no
+
+												instrument shall be provided.<br>
+
+												7. Language of the performance should be Hindi/English or both. However short
+
+												sub passages in other languages are allowed.<br>
+
+												8. Any kind of fluid, live animals, flame, heavy object or any material which has a
+
+												possibility of damaging the stage is not allowed.<br>
+
+												9. Dry colours may be used during the play, but the teams have to clean the stage
+
+												after their performance and the cleaning time will be included in the performance
+
+												time.<br>
+
+												10. Teams will be heavily penalised if they exceed the time limit.<br>
+
+												11. Plays can be based on any theme but since performance is being held at public
+
+												venues, any content directed against a certain political group or religious
+
+												community is strictly prohibited.<br>
+
+												12. Obscenity (at the discretion of judges) of any kind is not allowed and may lead to
+
+												disqualification.<br>
+
+												13. Any kind of plagiarism and profanity will lead to immediate disqualification.<br>
+
+												14. The decision of the judges will be final and binding.<br>
 						                    </div>
 						                </div>
 						                <div id="nukkadmenu2" class="tab-pane fade">
 						                    <div class="contact-content">
-						                        <b>Vineet Maurya </b> +91-9810383175 <br>
-						                        <b>Vaibhav Chauhan </b> +91-9968733717 <br>
+						                        Dev (PR Coordinator) - 9654929630<br>
+												Vaibhav Chauhan - 9718269992<br>
 						                    </div>
 						                </div>
 						            </div>
@@ -4488,50 +4558,123 @@
 					            <!-- Natya -->
 					            <div id="natya" class="tab-pane fade">
 						            <ul class="nav nav-tabs">
-						                <li class="active"><a data-toggle="tab" href="#natyahome">Info</a></li>
-						                <li><a data-toggle="tab" href="#natyamenu1">Rules</a></li>
+						                <!-- <li class="active"><a data-toggle="tab" href="#natyahome">Info</a></li> -->
+						                <li class="active"><a data-toggle="tab" href="#natyamenu1">Rules</a></li>
 						                <li><a data-toggle="tab" href="#natyamenu2">Contact</a></li>
 						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1v0aiBC8-hb0xxZ4EUiXITfXjhhBMh4AsmH_OxNpBHz0/viewform">Register</button>
 						            </ul>
 
 						            <div class="tab-content">
-						                <div id="natyahome" class="tab-pane fade in active">
+						                <!-- <div id="natyahome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">
 						                        </div>
-						                        <!-- <div class="info-col">
+						                        <div class="info-col">
 						                            <b>Date: </b>15 Feb<br>
 						                            <b>Time: </b>10:00 am<br>
 						                            <b>Venue: </b>BR Ambedkar Auditorium<br>
-						                        </div> -->
+						                        </div>
 						                        <div class="info-col"></div>
 						                    </div>
-						                </div>
-						                <div id="natyamenu1" class="tab-pane fade">
+						                </div> -->
+						                <div id="natyamenu1" class="tab-pane fade in active">
 						                    <div class="rule-content">
-						                        1. Performance should be in Hindi or English or both. However short sub - passages in other languages are allowed .<br>
-						                        2. Teams can have a maximum of 25 members, including backstage helps, and lights and sound technicians. <br>
-						                        3. The total time of performance should be 12 and 35-50 minutes for prelims and finals respectively.<br>
-						                        4. 4 chairs and 2 tables will be provided by our side.Any other production material has to be brought by the teams themselves but the organizers hold the discretion of allowing its inclusion on stage.<br>
-						                        5. Stage Play comprises of multiple scenes and may have blackouts.<br>
-						                        6. Backstage voiceovers and narrations are allowed during the performance.<br>
-						                        7. Pre-recorded music is allowed and should be brought in a CD/DVD or a pen drive in .cda or .mp3 format only. (Other FORMATs may not be supported on the computer – use them at your own risk).<br>
-						                        8. Participants will be provided with a laptop and are expected to appoint someone to operate the laptop during the performance.<br>
-						                        9. Music may also be played live. However, no amplifiers or plug-points will be provided for this purpose.<br>
-						                        10. Participants will be provided a light control box, using which the lighting on the stage can be controlled. (Teams need to have a CA for this purpose within Team Size limit).<br>
-						                        11. Any kind of fluid, flame, live animals, heavy objects or any kind of material that damages the stage is strictly NOT allowed and may lead to disqualification.<br>
-						                        12. Obscenity (at the discretion of the judges) of any kind is NOT allowed and will lead to immediate disqualification.<br>
-						                        13. Inappropriate content, blasphemy or content defaming any political or religious group is strictly prohibited.<br>
-						                        14. Time Limit should be strictly followed. Participants will be penalized by judges for not doing so. The time duration for prelims and finals includes performance time and stage setting time. The given time duration is from empty stage to empty stage.<br>
-						                        15. The decision of the judges will be final and binding. <br>
-						                        16. The prelims will be on 11th February and slots for the same will be declared on 9th February.<br>
-						                        17. The selected teams for the finals shall be informed through mail and the prelim result shall also be posted on the pratibimb facebook page.
+						                        PRELIMS/ELIMINATIONS:<br>
+
+												Team Size: No restrictions<br>
+
+												Eliminations:<br>
+
+												Registered teams will be called for eliminations in case of large number of entries
+
+												teams will be selected for prelims on the basis of script and video.<br>
+
+												A summary of a play or a relevant part bringing out the essence of the play must be
+
+												performed in Hindi/English or both. However short sub passages in other languages
+
+												are allowed. The teams are required to submit a short synopsis (not more than 70
+
+												words) of the script of their play before the eliminations.<br>
+
+												Time Limit: 10-15 minutes (including the stage set up and clearance time)<br>
+												<br>
+												FINALS:<br>
+
+												Number of teams to be selected:-6-8<br>
+
+												The complete version of the same play should be performed.<br>
+
+												TIME LIMIT: 35 - 50 minutes (including the stage set up and clearance time)<br>
+
+												Production material provided:<br>
+
+												4 chairs, 2 tables<br>
+												Any other production material has to be brought by the teams themselves but the
+
+												organizers hold the discretion of allowing its inclusion on stage.<br><br>
+
+												Judging Criteria:<br>
+
+												Screenplay, Direction, Script, Acting and Overall Impact.<br><br>
+
+												General Rules:<br>
+
+												1. Performance should be in Hindi or English or both. However short sub - passages<br>
+
+												in other languages are allowed.<br>
+
+												2. Stage Play comprises of multiple scenes and may have blackouts.<br>
+
+												3. Backstage voiceovers and narrations are allowed during the performance.<br>
+
+												4. Pre-recorded music is allowed and should be brought in a CD/DVD or a pen drive
+
+												in .cda or .mp3 format only. (Other FORMATs may not be supported on the
+
+												computer – use them at your own risk).<br>
+
+												5. Participants will be provided with a laptop and are expected to appoint someone
+
+												to operate the laptop during the performance.<br>
+
+												6. Music may also be played live. However, no amplifiers or plug-points will be
+
+												provided for this purpose.<br>
+
+												7. Participants will be provided a light control box, using which the lighting on the
+
+												stage can be controlled. (Teams need to have a CA for this purpose within Team
+
+												Size limit).<br>
+
+												8. Any kind of fluid, flame, live animals, heavy objects or any kind of material that
+
+												damages the stage is strictly NOT allowed and may lead to disqualification.<br>
+
+												9. Obscenity (at the discretion of the judges) of any kind is NOT allowed and will
+
+												lead to immediate disqualification.<br>
+
+												10. Inappropriate content, blasphemy or content defaming any political or religious
+
+												group is strictly prohibited.<br>
+
+												11. Time Limit should be strictly followed. Participants will be penalized by judges for
+
+												not doing so. The time duration for prelims and finals includes performance time
+
+												and stage setting time. The given time duration is from empty stage to empty
+
+												stage.<br>
+
+												12. The decision of the judges will be final and binding.<br>
 						                    </div>
 						                </div>
 						                <div id="natyamenu2" class="tab-pane fade">
 						                    <div class="contact-content">
-						                        <b>Shikhar Sachdeva </b> +91-8447403102<br>
-						                        <b>Manav Gupta </b> +91-9971838304<br>
+						                        Dev (PR Coordinator) - 9654929630<br>
+												Srishti Verma - 9711915570<br>
 						                    </div>
 						                </div>
 						            </div>
