--- a/index.html
+++ b/index.html
@@ -3372,8 +3372,7 @@
 						                </div>
 						                <div id="vocaliciousmenu1" class="tab-pane fade">
 						                    <div class="rule-content">
-						                        Online Prelims<br>
-						                        Send your recording (audio/video) or the link to your YouTube video to <a href="mailto:madhurima.western@gmail.com">madhurima.western@gmail.com</a><br><br>
+						          
 						                        Rules:<br>
 
 												1. Each participant is allotted a total of 6 minutes including setup.<br>
@@ -4128,11 +4127,11 @@
 						                <div id="kavyanjanahome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                        	यह वह मौका हैजहााँआप अपनी छिपी रचनात्मकता छिखा सकतेहैं, अपनेअन्दर िु पी काव्य प्रछतभा को प्रकट
+						                        	यह वह मौका है जहाँ आप अपनी छिपी रचनात्मकता दिखा सकते हैं, अपने अन्दर छुपी काव्य प्रतिभा को प्रकट कर
 
-													कर सकतेहैं| प्रछतभाछियोोंको एक वास्तछवक स्वरछचत छहन्दी कछवता प्रस्तुत करनी होिी | यह एक व्यक्तिित
+													सकते हैं | प्रतिभागियों को एक वास्तविक स्वरचित हिन्दी कविता प्रस्तुत करनी होगी | यह एक व्यक्तिगत
 
-													प्रछतयोछिता है|<br>
+													प्रतियोगिता है |<br>
 						                        </div>
 						                        <!-- <div class="info-col">
 						                            <b>Date: </b>13th Feb<br>
@@ -4146,19 +4145,19 @@
 						                    <div class="rule-content">
 						                        चरण १:<br>
 
-												कछवता स्वरछचत एवों पूणणत या छहन्दी मेंहोनी चाछहए | अन्य भाषाओोंमेंमौजूि छकसी भी कछवता का छहोंिी अनुवाि
+												कविता स्वरचित एवं पूर्णत या हिन्दी में होनी चाहिए | अन्य भाषाओं में मौजूद किसी भी कविता का हिंदी अनुवाद
 
-												छकसी भी रूप मेंस्वीकार नही ोंछकया जाएिा |एक प्रछतभािी एक प्रछवछि भेज सकता है|एक कॉलेज सेछकसी भी
+												किसी भी रूप में स्वीकार नहीं किया जाएगा |एक प्रतिभागी एक प्रविष्टि भेज सकता है |एक कॉलेज से किसी भी
 
-												सोंख्या मेंप्रछतभािी भाि लेसकतेहैं|आप अपनी प्रछवछियााँ <a href="mailto:sahitya.dtu@gmail.com">sahitya.dtu@gmail.com</a> पर एक सीछमत समय
+												संख्या में प्रतिभागी भाग ले सकते हैं |आप अपनी प्रविष्टियाँ sahitya.dtu@gmail.com पर एक सीमित समय के
 
-												के अन्दर भेज सकतेहै|<br>
+												अन्दर भेज सकते है |<br><br>
 
 												चरण २:<br>
 
-												चरण १ मेंचयछनत प्रछतभाछियोोंको िशणको के सामनेमोंच पर अपनी कछवता का वाचन करना होिा | प्रस्तुछत
+												चरण १ में चयनित प्रतिभागियों को दर्शको के सामने मंच पर अपनी कविता का वाचन करना होगा | प्रस्तुति सस्वर-
 
-												सस्वर-वाचन और कछवता मेंछनछहत छवचारोोंके आधार पर छनणाणयकोोंद्वारा छवजेता छनणीत होोंिे।<br>
+												वाचन और कविता में निहित विचारों के आधार पर निर्णायकों द्वारा विजेता निर्णीत होंगे।
 						                    </div>
 						                </div>
 						                <div id="kavyanjanamenu2" class="tab-pane fade">
@@ -4239,9 +4238,9 @@
 						                <div id="drishtikonhome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                        	यह एक मौक्तखक प्रछतयोछिता है, छजसमेआप को छिए िए छवषय पर आधाररत एक छचत्र के सम्बन्ध मेंअल्प-
+						                        	यह एक मौखिक प्रतियोगिता है, जिसमे आप को दिए गए विषय पर आधारित एक चित्र के सम्बन्ध में अल्प-समय
 
-													समय मेंसोचकर एक सरल और ताछकण क तरीके मेंअपनेछवचारोों को व्यि करना होिा|<br>
+													में सोचकर एक सरल और तार्किक तरीके में अपने विचारों को व्यक्त करना होगा|<br>
 						                        </div>
 						                        <!-- <div class="info-col">
 						                            <b>Date: </b>13th Feb<br>
@@ -4253,23 +4252,25 @@
 						                </div>
 						                <div id="drishtikonmenu1" class="tab-pane fade">
 						                    <div class="rule-content">
-						                        यह एक व्यक्तिित प्रछतयोछिता हैऔर एक कॉलेज सेछकसी भी सोंख्या मेंप्रछतभािी भाि लेसकतेहैं|<br>
+						                        यह एक व्यक्तिगत प्रतियोगिता है और एक कॉलेज से किसी भी संख्या में प्रतिभागी भाग ले सकते हैं |<br><br>
 
-												चरण १:
-												<br>
-												पहलेिौर मेंएक आशुभाषण प्रछतयोछिता होिी| प्रत्येक प्रछतभािी को ३० सेकों ड छवषय पर सोचनेके छलए छिए
+												चरण १:<br>
 
-												जायेंिेऔर छिर २ छमनट मेंछवचार व्यि करनेहोोंिे, छजसमेंउसेछवषय सेएक छनष्कषणभी छनकालना होिा
+												पहले दौर में एक आशुभाषण प्रतियोगिता होगी| प्रत्येक प्रतिभागी को ३० सेकंड विषय पर सोचने के लिए दिए
 
-												और उसे३० सेकों ड मेंव्यि करना होिा |अनुग्रह अवछध की समाक्ति के पश्तात भी बोलनेपर आपके अोंक
+												जायेंगे और फिर २ मिनट में विचार व्यक्त करने होंगे, जिसमें उसे विषय से एक निष्कर्ष भी निकालना होगा और
 
-												काटेजा सकतेहैं|<br>
+												उसे ३० सेकंड में व्यक्त करना होगा |अनुग्रह अवधि की समाप्ति के पश्तात भी बोलने पर आपके अंक काटे जा
+
+												सकते हैं |<br>
 
 												चरण २:<br>
 
-												यह भी एक आशुभाषण प्रछतयोछिता होिी, लेछकन पहलेचरण सेकही ोंअछधक और कािी अलि होिी | शेष
+												यह भी एक आशुभाषण प्रतियोगिता होगी, लेकिन पहले चरण से कहीं अधिक और काफी अलग होगी | शेष
 
-												छनयम पहलेचरण की समाक्ति के बाि बतायेजायेंिे|<br>
+												नियम पहले चरण की समाप्ति के बाद बताये जायेंगे |<br><br>
+
+												अन्य अतिरिक्त एवं नये नियम और दिशानिर्देश प्रतियोगिता के समय स्पष्ट किये जायेंगे |
 						                    </div>
 						                </div>
 						                <div id="drishtikonmenu2" class="tab-pane fade">
@@ -4353,7 +4354,7 @@
 						            </ul>
 
 						            <div class="tab-content">
-						                <div id="edm-nighthome" class="tab-pane fade in active">
+						                <div id="edm-nighthome" class="tab-pane fade">
 						                    <div class="info-content">
 						                        <div class="info-row">
 						                        	Anokha. Adhbudh. Aelaan.<br><br>
