--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 		                        <li><a href="https://www.instagram.com/engifest__dtu/" target="_blank"><i class="fa fa-instagram"></i>Instagram</a></li>
 		                      </ul>
 		                    </li>
+		                    <li id="sponsors"><a href="javascript:void(0)"><i class="fa fa-group"></i><span style="position: relative;">Sponsors</span></a></li>
 		                    <li id="engifest-team"><a href="engifest-team/" target="_blank"><i class="fa fa-wrench"></i><span style="position: relative;">Engifest Team</span></a></li>
 		                    <li id="contact-us"><a href="javascript:void(0)"><i class="fa fa-envelope"></i><span>Contact Us</span></a></li>
 		                  </ul>
@@ -108,12 +109,33 @@
 		<div id="Menu" class="row" style="z-index: 200;">
 			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1 lowermenusound">Home</div>
 			<div id="events" class="col-xs-2 align-center  floath2 lowermenusound">Events</div>
-			<div id="sponsors" class="col-xs-2 align-center floath3 lowermenusound">Sponsors</div>
+			<div id="pro-night" class="col-xs-2 align-center floath3 lowermenusound">Pro Night</div>
 			<!-- <div id="contact" class="col-xs-2 align-center floath4">Contact</div> -->
 			<div id="registration" class="col-xs-2 align-center floath5 lowermenusound">Registration</div>
 		</div>
 		
 		<!-- MODALS -->
+
+		<!-- Pro Night Modal -->
+		<div id="proNightModal" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <div class="modal-header">
+		      <span class="close" id="spanProNightModal">&times;</span>
+		      <center><p>Pro Night</p></center>
+		    </div>
+		    <div class="modal-body modal-footer">
+		      <div class="row">
+                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+                        </div>
+                </div>
+		    </div>
+		    <!-- <div class="modal-footer">
+		      <p>Modal Footer</p>
+		    </div> -->
+		  </div>
+		</div>
 
 		<!-- Sponsor Modal -->
 		<div id="sponsorModal" class="modal">
