--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
 
         <!-- Accomodation div for future -->
-		<div id="accomodationDiv" class="float lowermenusound" >
+		<div id="accomodationDiv" class="float-acc lowermenusound" >
 			<a class="no-decoration" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accomodation
 			</a>
 		</div>
