--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
 		                            <li id="legacy"><a href="javascript:void(0)">DTU: The Legacy</a></li>
 		                        </ul>
 		                    </li>
-		                    <li><a href="gallery.html" target="_blank"><i class="fa fa-camera"></i><span style="position: relative;">Glimpses</span></a></li>                    
+		                    <li><a href="javascript:void(0)"><i class="fa fa-camera"></i><span style="position: relative;">Glimpses</span><span class="fa fa-angle-left" style="float: right; position: relative;"></a>
+		                    	<ul>
+		                            <li id="gallery"><a href="gallery.html" target="_blank"><i class="fa fa-picture-o "></i>Gallery</a></li>
+		                            <li id="after-movie"><a href="javascript:void(0)"><i class="fa fa-file-video-o "></i>After Movie'16</a></li>
+		                        </ul>
+		                    </li>                    
 		                    
 		                    <li><a href="javascript:void(0)"><i class="fa fa-share-alt"></i><span style="position: relative;">Social Media</span><span class="fa fa-angle-left" style="float: right; position: relative;"></span></a>
 		                      <ul>
@@ -109,7 +114,7 @@
 		<div id="Menu" class="row" style="z-index: 200;">
 			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1 lowermenusound">Home</div>
 			<div id="events" class="col-xs-2 align-center  floath2 lowermenusound">Events</div>
-			<div id="pro-night" class="col-xs-2 align-center floath3 lowermenusound">Pro Night</div>
+			<div id="pro-night" class="col-xs-2 align-center floath3 lowermenusound">Pro Nights</div>
 			<!-- <div id="contact" class="col-xs-2 align-center floath4">Contact</div> -->
 			<div id="registration" class="col-xs-2 align-center floath5 lowermenusound">Registration</div>
 		</div>
@@ -120,14 +125,14 @@
 		<div id="proNightModal" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
-		    <div class="modal-header">
+		    <!-- <div class="modal-header">
 		      <span class="close" id="spanProNightModal">&times;</span>
-		      <center><p>Pro Night</p></center>
-		    </div>
+		      <center><p>Pro Nights</p></center>
+		    </div> -->
 		    <div class="modal-body modal-footer">
 		      <div class="row">
-                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+                        <!-- <div class="pr-night-type"><center>Title Sponsor</center></div> -->
+                        <div><center><img class="pro-night-image" src="assets/main/pro_night_cover.png"></center>
                         </div>
                 </div>
 		    </div>
@@ -3254,7 +3259,7 @@
 						                        	"Too many people in the modern world view poetry as a luxury, not a necessity like petrol. But to me it's the oil of life."<br>
 
 													Engifest Infinity presents Kavi Sammelan, an evening of wonder and beauty, enhanced by the magic that can only be created by the trappings of emotions within words.
-													The event holds precedent in the form of a memorable evening during Engifest 2016, where renowned poet Kumar Vishwas turned out to charm the enormous crowds with his witticisms.
+													The event holds precedent in the form of a memorable evening during Engifest 2017, where renowned poet Kumar Vishwas turned out to charm the enormous crowds with his witticisms.
 													The event was well attended, with all the faculty members of DTU and hundreds of students in attendance to watch the man speak.
 													This year too, the promises of sweet sorrows and magical moments are abound.
 													<br><br>
