rock night and live wire in active

--- a/index.html
+++ b/index.html
@@ -4472,7 +4472,7 @@
 						            </ul>
 
 						            <div class="tab-content">
-						                <div id="rock-nighthome" class="tab-pane fade in active">
+						                <div id="rock-nighthome" class="tab-pane fade">
 						                    <div class="info-content" style="overflow-y: auto;">
 						                        <div class="info-row">
 						                            "One good thing about music, when it hits you, you feel no pain."
@@ -4526,7 +4526,7 @@
 						        </div>
 
 						        <!-- Livewire -->
-						        <div id="livewire" class="tab-pane fade">
+						        <div id="livewire" class="tab-pane fade in active">
 						            <ul class="nav nav-tabs">
 						                <li class="active"><a data-toggle="tab" href="#livewirehome">Info</a></li>
 						            </ul>
