--- a/index.html
+++ b/index.html
@@ -4515,7 +4515,7 @@
 													Bass Rani  ke saath Raja Baja bhi bulva de.<br>
 													Aao Engifest ka Scene Set Karwa De!<br><br>
 
-													Engifest 2017 brings to you  one of the most exciting, experimental and engaging electronic music producers in the Indian Scene – NUCLEYA!
+													Engifest 2017 brings to you  one of the most exciting, experimental and engaging electronic music producers in the Indian Scene – <b>NUCLEYA</b>!
 						                        </div>
 						                        <!-- <div class="info-col">
 						                            <b>Date: </b>15 Feb<br>
@@ -4731,7 +4731,7 @@
 						                        <div class="info-col"></div>
 						                    </div>
 						                </div>
-						                <div id="natyamenu1" class="tab-pane fade in active">
+						                <div id="natyamenu1" class="tab-pane fade">
 						                    <div class="rule-content">
 						                        PRELIMS/ELIMINATIONS:<br>
 
@@ -5049,7 +5049,7 @@
 					            <div id="the-selfie-brag" class="tab-pane fade">
 						            <ul class="nav nav-tabs">
 						                <li class="active"><a data-toggle="tab" href="#the-selfie-braghome">Info</a></li>
-						                <li><a data-toggle="tab" href="#the-selfie-bragmenu1">Info</a></li>
+						                <li><a data-toggle="tab" href="#the-selfie-bragmenu1">Rules</a></li>
 
 						            </ul>
 
