--- a/index.html
+++ b/index.html
@@ -31,14 +31,28 @@
 	<body id="container">
 		
 		<!-- Loader -->
-		<div id="loader">
+		<div id="loader-wrapper">
+			<div id="loader-logo" style="">
+		            <img src="assets/main/Engi_logo.png" id="main-logo">
+		        </div>
+			<div id="loader">
+				<div class="ls-particles ls-part-1"></div>
+				<div class="ls-particles ls-part-2"></div>
+				<div class="ls-particles ls-part-3"></div>
+				<div class="ls-particles ls-part-4"></div>
+				<div class="ls-particles ls-part-5"></div>
+				<div class="lightsaber ls-left ls-green"></div>
+				<div class="lightsaber ls-right ls-red"></div>
+			</div>
+		</div>
+		<!-- <div id="loader">
 			<svg width="300px" height="200px" viewBox="0 0 187.3 93.7" preserveAspectRatio="xMidYMid meet" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%) matrix(1, 0, 0, 1, 0, 0);">
 			 <path stroke="#ededed" id="outline" fill="none" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" 
 			        d="M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1 				c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z" />
 			<path id="outline-bg" opacity="0.05" fill="none" stroke="#ededed" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" 
 			        d="				M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1 				c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z" />
 			</svg>
-		</div>
+		</div> -->
 		<script type="text/javascript" src="script/loader.js"></script>
 		
 		<!-- Canvas  -->
@@ -3217,8 +3231,8 @@
 						                        </div>
 						                        <div class="info-row">
 						                            <b>Date: </b>18 Feb<br>
-						                            <b>Time: </b>5 pm - 7 pm<br>
-						                            <b>Venue: </b>Auditorium<br>
+						                            <b>Time: </b>5:00 pm<br>
+						                            <b>Venue: </b>BR Ambedkar Auditorium<br>
 						                        </div>
 						                    </div>
 						                </div>
